k8s/ticket-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
  labels:
    app: ticket-service
spec:
  type: ClusterIP
  selector:
    app: ticket-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
